# HPC-Project

./: .gitignore  Basic Commands and Installs.sh  Basic Commands.sh  Build and Run.sh  CMakeCache.txt  CMakeLists.txt  Colab Trials.ipynb  HPC_Project  HPC_Project.cbp  HPC_ProjectReport.docx  Makefile  README.md  Research.md  To Do.md  cmake_install.cmake  graphs.ipynb  main.cpp  trial.cpp  trial.h
.cmake/api/v1/reply/: cache-v2-0fb4fccdc221dfb0ce91.json  cache-v2-223dad6ae1a4ea55f9b1.json  cache-v2-8ebe1cd396e941304818.json  cmakeFiles-v1-62ec11ee07456907f79a.json  cmakeFiles-v1-7dc4a23280dfd63df69d.json  cmakeFiles-v1-ac9ee047024bbbddafbb.json  codemodel-v2-6738da14326d2ffc6b88.json  codemodel-v2-9a49ca30576615051c5d.json  codemodel-v2-a3fd70fec28742443292.json  index-2024-03-27T06-17-55-0962.json  index-2024-03-28T16-20-27-0477.json  index-2024-04-14T08-30-34-0930.json  target-HPC_Project-Debug-30b8cbf5b03ca08cbeea.json  target-HPC_Project-Release-10ba2ef433020c5c8ec2.json
Basic Codes/: Loading_Datasets.cpp
utils/: display_functions.cpp  display_functions.h  filter_functions.cpp  filter_functions.h  parallel_dependent_codes.cpp  parallel_dependent_codes.h  parallel_independent_codes.cpp  parallel_independent_codes.h  resize.cpp  resize.h  serial_codes.cpp  serial_codes.h
